Chore: junit fix on fresh imap tests